--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  nfc_manager: 4.1.1
+  firebase_core: ^4.2.1
 
 dev_dependencies:
   build_runner: ^2.4.12
