--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   nfc_manager: 4.1.1
   firebase_core: ^4.2.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   build_runner: ^2.4.12
